tdf#138937 don't use attributes that depend on preset data

if preset data is not found. Curve, polygon, and free form
motion paths do not have preset data. Create the path
in these cases as well.

Change-Id: Idd3b24b81a15de53e302e8cb7f3636d72e10b4da
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/108022
Tested-by: Jenkins
Reviewed-by: Mark Hung <marklh9@gmail.com>
(cherry picked from commit 765b13b67e46aa8c8618fdad8582f8586bffce9e)